--- a/code/services/templates/exercise.html
+++ b/code/services/templates/exercise.html
@@ -157,19 +157,17 @@
                 </p>
             </div>
         </div>
-
-
-
-
     </div>
-
-
-
-
-
-
-
-
+    <div class="cursors">
+        <div><span></span></div>
+        <div><span></span></div>
+        <div><span></span></div>
+        <div><span></span></div>
+        <div><span></span></div>
+        <div><span></span></div>
+        <div><span></span></div>
+    </div>
+    <script src="{{ url_for('static',filename='js/cursor.js') }}"></script>
 
     </body>
     
