--- a/code/services/templates/socials.html
+++ b/code/services/templates/socials.html
@@ -48,7 +48,7 @@
             <div class="LeftCol">
                 <div class="PleasureItem">
                     <a href="https://github.com/SentientPlatypus">
-                        <img src="{{ url_for('static',filename='github.png') }}" alt="Github">
+                        <img src="{{ url_for('static',filename='images/github.png') }}" alt="Github">
                     </a>
                     <div class="caption">
                         <p>
@@ -102,6 +102,16 @@
 
 
 
+        <div class="cursors">
+            <div><span></span></div>
+            <div><span></span></div>
+            <div><span></span></div>
+            <div><span></span></div>
+            <div><span></span></div>
+            <div><span></span></div>
+            <div><span></span></div>
+        </div>
+        <script src="{{ url_for('static',filename='js/cursor.js') }}"></script>
 
     </body>
     
