--- a/code/services/templates/gaming.html
+++ b/code/services/templates/gaming.html
@@ -108,6 +108,16 @@
 
 
 
+        <div class="cursors">
+            <div><span></span></div>
+            <div><span></span></div>
+            <div><span></span></div>
+            <div><span></span></div>
+            <div><span></span></div>
+            <div><span></span></div>
+            <div><span></span></div>
+        </div>
+        <script src="{{ url_for('static',filename='js/cursor.js') }}"></script>
 
     </body>
     
