--- a/code/services/templates/index.html
+++ b/code/services/templates/index.html
@@ -78,7 +78,7 @@
                                 Datascience,<br>  
                                 Computer Visions,<br> 
                                 CAD,<br>
-                                Machine Learning <br>
+                                Machine Learning, <br>
                                 Discord Bots,<br>  
                                 Databases,<br>  
                                 MC Plugins,<br>  
@@ -96,13 +96,14 @@
                                 Rust, <br>
                                 Java,<br>  
                                 HTML/CSS/JS,<br>  
+                                SQL,<br>  
                                 Unreal Engine,<br>  
                                 Blender,      <br> 
                                 Autodesk Fusion 360 <br>
                                 MongoDB,<br>  
-                                Latex <br>
-                                Flask <br>
-                                Rocket <br>
+                                Latex, <br>
+                                Flask, <br>
+                                Rocket, <br>
                                 GPT-3,<br>  
                                 OpenCV,<br>  
                                 numpy, <br>
@@ -493,7 +494,10 @@
                                         Amoris' main feature was the.. well.. lets call it the "friend simulator" This simulator allows you to customize everything about your buddy. Images, personality, etc. The cool thing is, 
                                         The experiences with your friend would be saved, and their responses would update as well. This is thanks to GPT-3, an incredibly advanced NLP engine.
                                         Ok. 
-                                        WE DO NOT TALK ABOUT AMORIS.
+                                        
+                                         <br>
+
+                                         It should also be noted that Amoris has a webapp that users can go to modify guild settings. Source code is linked down below. It was an excellent application of MongoDB.
                                     </p>
                                 </div>
                                 <div class="popupFooter">
@@ -502,6 +506,7 @@
                                     </h3>
                                     <div class="links">
                                         <a href="https://discord.com/api/oauth2/authorize?client_id=822265614244511754&permissions=8&scope=bot" target="_blank"><i class="fa-brands fa-discord fa-2x socialsIcon"></i></a>
+                                        <a href="https://github.com/SentientPlatypus/Amoris-Flask-Webapp" target="_blank"><i class="fa-brands fa-github fa-2x socialsIcon"></i></a>
                                     </div>
                                 </div>
                             </div>          
