--- a/code/services/templates/index.html
+++ b/code/services/templates/index.html
@@ -58,9 +58,8 @@
                         <h1>
                             me.<span class="function">About</span>()
                         </h1>
-                        <p>“””Since the February of 2021, 
-                            I have been a computer science enthusiast. 
-                            I have worked on several projects and have experience collaborating with fellow developers.”””
+                        <p>"""Since the February of 2021, I have trekked this world of computer science, mainly working on computer vision, web applications, discord bots, machine learning, and game addons.
+                            On this journey, I have worked on several projects and have had valuable experience collaborating with fellow developers."""
                         </p> 
                         <a href="https://github.com/SentientPlatypus" target="_blank"><i class="fa-brands fa-github fa-2x socialsIcon"></i></a>
                         <a href="https://stackoverflow.com/users/19341357/sentient-platypus" target="_blank"><i class="fa-brands fa-stack-overflow fa-2x socialsIcon"></i></a>
@@ -265,8 +264,9 @@
                                 </div>
                                 <div class="popupContent">
                                     <p>
-                                        FRC 2022 was a game very similar to basketball. Code Red Robotics (My Highschools Robotics Team), wanted Visions to program a visions pipeline that would accurately track the circular target and relay its distance and angle data at a high rate.
-                                        We delivered.
+                                        Rapid React, the FRC 2022 game was very similar to basketball. Code Red Robotics (My Highschools Robotics Team), wanted a visions pipeline that would accurately track the circular target and relay its distance and angle data at a high rate.
+                                        We delivered. I worked with one other student and a mentor to create not only a target tracking pipeline, but also a ball tracking one. This was the first year that the visions sytsem worked on the robot. The target tracking pipeline was deployed on a limelight, while the 
+                                        ball tracking one was developed on a jevois camera. Both used OpenCV, involved lots of trig, and yielded results that required (mostly) linear corrections. Overall, It was a solid pipeline that helped the team perform amazing at the competition.
                                     </p>
                                 </div>
                                 <div class="popupFooter">
@@ -534,7 +534,7 @@
                                 <div class="popupContent">
                                     <p>
                                         This was the submission for the discord code jam hosted by the Python discord server. It was a competition among groups made of individuals who had solved the qualifier.
-                                        It was my very first time working in a group with other developers, so it was a very valueable experience.
+                                        It was my very first time working in a group with other developers, so it was a very valuable experience.
                                     </p>
                                 </div>
                                 <div class="popupFooter">
@@ -581,8 +581,9 @@
                                 </div>
                                 <div class="popupContent">
                                     <p>
-                                        FRC 2022 was a game very similar to basketball. Code Red Robotics (My Highschools Robotics Team), wanted Visions to program a visions pipeline that would accurately track the circular target and relay its distance and angle data at a high rate.
-                                        We delivered.
+                                        Rapid React, the FRC 2022 game was very similar to basketball. Code Red Robotics (My Highschools Robotics Team), wanted a visions pipeline that would accurately track the circular target and relay its distance and angle data at a high rate.
+                                        We delivered. I worked with one other student and a mentor to create not only a target tracking pipeline, but also a ball tracking one. This was the first year that the visions sytsem worked on the robot. The target tracking pipeline was deployed on a limelight, while the 
+                                        ball tracking one was developed on a jevois camera. Both used OpenCV, involved lots of trig, and yielded results that required (mostly) linear corrections. Overall, It was a solid pipeline that helped the team perform amazing at the competition.
                                     </p>
                                 </div>
                                 <div class="popupFooter">
