--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -28,15 +28,10 @@
         <section id="TitleBoxSection">
             <div class="TitleBox" id="TitleBox">
                 <p>
-                    me = <span class="function">Dev</span>(<br>
-                    &nbsp;&nbsp;&nbsp;&nbsp;<span class = "param">name</span> = <span class = "str">“Gene”</span>, <br>
-                    &nbsp;&nbsp;&nbsp;&nbsp;<span class = "param">age</span> = <span class="int">15</span>, <br>
-                    &nbsp;&nbsp;&nbsp;&nbsp;<span class = "param">values</span> = [ <br>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#Persistence"><span class = "str">"Persistence"</span></a>, <br>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#Prolificity"><span class = "str">"Prolificity"</span></a>, <br>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="#Pleasure"><span class = "str">"Pleasure"</span></a> <br>
-                    &nbsp;&nbsp;&nbsp;&nbsp;] <br>
-                    )
+                    <span class="let">let</span> <span class="red">mut</span> me <span class="red">=</span> <span class="function">Dev</span>{<br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;<span class = "param">name</span> : <span class="function">String</span>::<span class="function">from</span>(<span class = "str">“Gene”</span>), <br>
+                    &nbsp;&nbsp;&nbsp;&nbsp;<span class = "param">age</span> : <span class="int">16</span>, <br>
+            };
                 </p>
             </div>
         </section>
@@ -78,6 +73,7 @@
                                 Computer Visions,<br> 
                                 CAD,<br>
                                 Machine Learning, <br>
+                                webscraping, <br>
                                 Discord Bots,<br>  
                                 Databases,<br>  
                                 MC Plugins,<br>  
@@ -96,8 +92,10 @@
                                 Java,<br>  
                                 HTML/CSS/JS,<br>  
                                 SQL,<br>  
+                                Tensorflow <br>
                                 Unreal Engine,<br>  
                                 Blender,      <br> 
+                                jupyter notebooks, <br>
                                 Autodesk Fusion 360 <br>
                                 MongoDB,<br>  
                                 Latex, <br>
