--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -120,7 +120,7 @@
                             <p>
 
                                 <span>Founder</span> <br>
-                                <a href="https://resonance-website.sentientplatypu.repl.co" target="_blank">@Resonance</a><br>
+                                <a href="https://resonancewebsite.herokuapp.com/" target="_blank">@Resonance</a><br>
                                 2022 - now <br><br>  
 
                                 <span>Webapp developer + Cofounder</span> <br>
@@ -678,7 +678,7 @@
                                         Links:
                                     </h3>
                                     <div class="links">
-                                        <a href="https://resonance-website.sentientplatypu.repl.co" target="_blank"><i class="fa-solid fa-globe fa-2x socialsIcon"></i></a>
+                                        <a href="https://resonancewebsite.herokuapp.com/" target="_blank"><i class="fa-solid fa-globe fa-2x socialsIcon"></i></a>
                                     </div>
                                 </div>
                             </div>                
