--- a/flaskApp/templates/exercise.html
+++ b/flaskApp/templates/exercise.html
@@ -48,113 +48,75 @@
         <div class="mainContainer">
             <div class="dayRight">
                 <div class="dayText">
-                    <h1>Monday</h1>
-                    <p>Arms</p>
+                    <h1>ARMS</h1>
                 </div>
                 <div class="exerciseBox">
                     <p>
-                        Bicep curl 75x <br>
-                        Hybrid curl 50x <br>
-                        Overhead press 50x <br>
-                        Crunch 100x <br>
-                        Incline bench 100x <br>
-                        Bent over row 50x <br>
-                        pull up 32x
+                        Hybrid Curl 4x12 <br>
+                        Wrist Curl 4x12 <br>
+                        bodyweight tricep extensions <br>
+                        French curl 4x12 <br>
                     </p>
                 </div>
             </div>
             <div class="dayLeft">
                 <div class="exerciseBox">
                     <p>
-                        Side lat raises 50x<br>
-                        dumbell flye 32x <br>
-                        crunches 100x <br>
-                        Overhead press 50x <br>
-                        Bent over row 50x <br>
-                        pull up 32x
+                        Archer Push up 100x <br>
+                        dumbell flye 4x12 <br>
                     </p>
                 </div>
                 <div class="dayText">
-                    <h1>Tuesday</h1>
-                    <p>More arms</p>
+                    <h1>Chest</h1>
                 </div>
             </div>
         </div>
         <div class="dayRight">
             <div class="dayText">
-                <h1>Wednesday</h1>
-                <p>Triceps</p>
+                <h1>Shoulders</h1>
             </div>
             <div class="exerciseBox">
                 <p>
-                    Tricep curl 50x <br>
-                    Military press 50x <br>
-                    push ups 48x <br>
-                    crunches 100x <br>
-                    Bent over row 50x <br>
-                    pull up 32x <br>
+                    Side lat raises 5x12 <br>
+                    Front lat raises 4x10 <br>
+                    Overhead press 4x16 <br>
+                    Shrugs 5x10 <br>
                 </p>
             </div>
         </div>
         <div class="dayLeft">
             <div class="exerciseBox">
                 <p>
-                    Bicep curl 75x <br>
-                    Hybrid curl 50x <br>
-                    Overhead press 50x <br>
-                    Crunch 100x <br>
-                    Incline bench 100x <br>
-                    Bent over row 50x <br>
-                    pull up 32x
-                </p>
-            </div>
-            <div class="dayText">
-                <h1>Thursday</h1>
-                <p>More arms</p>
-            </div>
-        </div>
-        <div class="dayRight">
-            <div class="dayText">
-                <h1>Friday</h1>
-                <p>Arms</p>
-            </div>
-            <div class="exerciseBox">
-                <p>
-                    Side lat raises 50x<br>
-                    dumbell flye 32x <br>
-                    crunches 100x <br>
-                    Overhead press 50x <br>
-                    Bent over row 50x <br>
-                    pull up 32x
-                </p>
-            </div>
-        </div>
-        <div class="dayLeft">
-            <div class="exerciseBox">
-                <p>
-                    Tricep curl 50x <br>
-                    Military press 50x <br>
-                    push ups 48x <br>
-                    crunches 100x <br>
-                    pull up 32x <br>
-                </p>
-            </div>
-            <div class="dayText">
-                <h1>Saturday</h1>
-                <p>More arms</p>
-            </div>
-        </div>
-        <div class="dayRight">
-            <div class="dayText">
-                <h1>Sunday</h1>
-                <p>Legs</p>
-            </div>
-            <div class="exerciseBox">
-                <p>
+                    Weighted squat jump 5x10 <br>
+                    Bulgarian split squat 4x12 <br>
                     calf raises 100x <br>
-                    squats 100x <br>
-                    crunches 100x <br>
                 </p>
+            </div>
+            <div class="dayText">
+                <h1>Legs</h1>
+            </div>
+        </div>
+        <div class="dayRight">
+            <div class="dayText">
+                <h1>Back</h1>
+            </div>
+            <div class="exerciseBox">
+                <p>
+                    Rows 4x25 each side <br>
+                </p>
+            </div>
+        </div>
+        <div class="dayLeft">
+            <div class="exerciseBox">
+                <p>
+                    Weighted Pogo jumps 50x <br>
+                    Punches 50x each side <br>
+                    crunches 100x <br>
+                    pull up 6x8 <br>
+                </p>
+            </div>
+            <div class="dayText">
+                <h1>DO every day</h1>
             </div>
         </div>
     </div>
