--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -203,7 +203,7 @@
                     </div>
                     <div class="ProjectCarousel">
                         <div class="ProjectItem" id="foresightapp" onclick="openThePopup('foresightapp')" data-hover="Click for More Information!">
-                            <img src="{{ url_for('static',filename='images/Foresightlogo.png') }}" alt="ForesightAPI">
+                            <img src="{{ url_for('static',filename='images/ForesightLogo.png') }}" alt="Foresight">
                             <h3 class="title">
                                 Foresight
                             </h3>
@@ -212,7 +212,7 @@
                             </p>
                             <div class="popupData">
                                 <div class="popupBanner">
-                                    <img src="{{ url_for('static',filename='images/Foresightlogo.png') }}" alt="Foresight API" class="popupBanner">
+                                    <img src="{{ url_for('static',filename='images/ForesightLogo.png') }}" alt="Foresight " class="popupBanner">
                                 </div>
                                 <div class="popupHead">
                                     <h3>
