changed foresight to replit url FOR NOW

--- a/flaskApp/templates/index.html
+++ b/flaskApp/templates/index.html
@@ -240,7 +240,7 @@
                                         Links:
                                     </h3>
                                     <div class="links">
-                                        <a href="https://foresightapp.herokuapp.com" target="_blank"><i class="fa-solid fa-globe fa-2x socialsIcon"></i></a>
+                                        <a href="https://foresight.sentientplatypu.repl.co" target="_blank"><i class="fa-solid fa-globe fa-2x socialsIcon"></i></a>
                                     </div>
                                 </div>
                             </div>
