--- a/flaskApp/templates/gaming.html
+++ b/flaskApp/templates/gaming.html
@@ -22,9 +22,9 @@
     <body>
         <nav class="NavBar">
             <a href="/" class="btn">Home<span>()</span></a>
-            <a href="/home#AboutMe" class="btn"><span>me.</span>About<span>()</span></a>
-            <a href="/home#ContactMe" class="btn"><span>me.</span>Contact<span>()</span></a>
-            <a href="/home#Work" class="btn"><span>me.</span>Work<span>()</span></a>
+            <a href="/#AboutMe" class="btn"><span>me.</span>About<span>()</span></a>
+            <a href="/#ContactMe" class="btn"><span>me.</span>Contact<span>()</span></a>
+            <a href="/#Work" class="btn"><span>me.</span>Work<span>()</span></a>
         </nav>
 
 
